--- a/estilo.css
+++ b/estilo.css
@@ -2,15 +2,15 @@ html {scroll-behavior: smooth;}
 body { margin: 0px; font-family: Arial; color: #fff; text-align: center; justify-content: center; background: #31363d;}
 header {text-align: center; size: 100% 100%; display: flex;}
 h1 {font-weight: bolder; font-family: Anton; color: #fff; background:#2a4685; display: inline-block; 
-	padding: 0.2em 0.3em; border: solid 0.1em #2a4685; border-radius: 1.5em; margin-top: 6.95vw; font-size: 6.20vw;
-	text-align: center; justify-content: center; margin-bottom: 2vw; margin-left: 0.5; margin-right: 0.5;}
+	padding: 0.2em 0.3em; border: solid 0.1em #2a4685; border-radius: 1.5em; margin-top: 2em; font-size: 4.75em;
+	text-align: center; justify-content: center; margin-bottom: 2em; margin-left: 0.5; margin-right: 0.5;}
 h2 {margin: 0;}
 h3 {margin: 0;}
 a {text-decoration: none; color: white;}
 div {display: inline-block;}
 section {background: #31363d; position: relative; margin: 0;}
-.tittle {background: url("images/biblioteca.jpg") fixed; background-size: 100% 52%; 
-        background-repeat: no-repeat; width: 100%; height: 25vw; display: flex;}
+.tittle {background: url("images/biblioteca.jpg") fixed; background-size: 100% 100%; 
+        background-repeat: no-repeat; width: 100%; display: flex;}
 .layerback {width: 100%; height: 100%; background: rgba(0,0,0,0.5)}
 .part {font-weight: bolder; font-family: Anton; color: #2a4685; background: #fff; display: inline-block; 
 	padding: 0.2em 0.5em; border: solid 0.12em #2a4685; border-radius: 2em; margin: 0.75em; font-size: 3.5em;
@@ -66,7 +66,7 @@ section {background: #31363d; position: relative; margin: 0;}
 .visit1:hover h3 {background: #9e2820;}
 #navbar  {background-color: #2a4673; display: block; position: fixed; width: 100%; z-index: 1000; transition: 0.5s;}
 #navbar a {padding-right: 0.5em; padding-left: 0.5em; border-right: solid white 0.1em; display: inline-block; 
-		  padding-top: 0.25em; padding-bottom: 0.25em; border-radius: 0; font-size: 2vw;}
+		  padding-top: 0.25em; padding-bottom: 0.25em; border-radius: 0; font-size: 1.5em;}
 .first {border-left: solid white 0.1em; border-radius: 0;}
 .audio {margin: 1.5em; width: 14.5em; height: 20em}
 .container-all{
